--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,16 @@
         }
     ],
     "require": {
-        "php": "8.2.* | 8.3.*",
-        "code-distortion/array-object-extended": "^0.1.0",
-        "code-distortion/staticall": "^0.1.0"
+        "php": "8.2.* | 8.3.* | 8.4.*",
+        "code-distortion/array-object-extended": "^0.1.1"
     },
     "require-dev": {
-        "infection/infection": "^0.10 | ^0.11 | ^0.12 | ^0.13 | ^0.14 | ^0.15 | ^0.16 | ^0.17 | ^0.18 | ^0.19 | ^0.20 | ^0.21 | ^0.22 | ^0.23 | ^0.24 | ^0.25 | ^0.26 | ^0.27",
-        "nesbot/carbon": "^2.66",
-        "phpstan/phpstan": "^0.9 | ^0.10 | ^0.11 | ^0.12 | ^1.0",
-        "phpunit/phpunit": "~4.8 | ^5.0 | ^6.0 | ^7.0 | ^8.4 | ^9.0 | ^10.0",
-        "squizlabs/php_codesniffer": "^3.8.0",
-        "symfony/var-dumper": "^6.2"
+        "infection/infection": "^0.29",
+        "nesbot/carbon": "^3.8.4",
+        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-strict-rules": "^2.0",
+        "phpunit/phpunit": "^11.0",
+        "squizlabs/php_codesniffer": "^3.8.0"
     },
     "autoload": {
         "psr-4": {
